namespace foll_backend.IAM.Interfaces.REST.Resources;

public record LoginRequest(string Email, string Password);
